--- a/devapp/app/views/layouts/application.html.erb
+++ b/devapp/app/views/layouts/application.html.erb
@@ -9,6 +9,32 @@
   </head>
 
   <body>
+
+    <!-- NAVIGATION -->
+    <nav class="navbar navbar-default navbar-static-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
+              <span class="sr-only">Toggle Navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <%= link_to root_path, class: "navbar-brand" do %>
+              <i class="fa fa-group"></i>
+                Devmatch
+            <% end %>
+          </div>
+
+          <div class="collapse navbar-collapse" id="main-navbar">
+            <ul class=" nav navbar-nav navbar-right">
+              <li><%= link_to "About", about_path %></li>
+              <li><%= link_to "Contact Us", new_contact_path %></li>
+            </ul>
+          </div><!-- end nav collapse -->
+        </div><!-- end container -->
+      </nav><!-- navbar -->
+
     <%= yield %>
   </body>
 </html>
