--- a/devapp/app/views/layouts/application.html.erb
+++ b/devapp/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 
           <div class="collapse navbar-collapse" id="main-navbar">
             <ul class=" nav navbar-nav navbar-right">
-              <li><%= link_to "About", about_path %></li>
+              <li><%= link_to "Bio", bio_path %></li>
               <li><%= link_to "Contact Us", new_contact_path %></li>
             </ul>
           </div><!-- end nav collapse -->
