--- a/devapp/app/assets/stylesheets/sass/application.sass
+++ b/devapp/app/assets/stylesheets/sass/application.sass
@@ -10,15 +10,14 @@
 //  * files in this directory. Styles in this file should be added after the last require_* statement.
 //  * It is generally better to create a new file per style scope.
 //  *
-//  *= require_tree .
-//  *= require_self
 //  */
 
 // GEM ADD-ONs
-@import 'bootstrap-sprockets'
-@import 'bootstrap'
-@import 'font-awesome-sprockets'
-@import 'font-awesome'
+//"bootstrap-sprockets" must be before "bootstrap" and "bootstrap/variables"
+@import "bootstrap-sprockets"
+@import "bootstrap"
+@import "font-awesome-sprockets"
+@import "font-awesome"
 
 // Import All Sass Directory files
 // Variable import must be at first so all partial files can access the variables stylesheet
